# technobabble

./: Cargo.toml
src/: camera.rs  grid.rs  input.rs  main.rs  renderer.rs  transform.rs
src/movement/: mod.rs  q8p24.rs  vector.rs
src/rtree/: mod.rs
